@@ -40,6 +40,10 @@
 #  include "config.h"
 #endif
 
+#ifdef HAVE_SYS_SYSLOG_H
+#  include <sys/syslog.h>
+#endif
+
 #include <errno.h>
 #include <stdio.h>
 #include <stdlib.h>
