@@ -42,6 +42,10 @@
 #  include "config.h"
 #endif
 
+#ifdef HAVE_SYS_SYSLOG_H
+#  include <sys/syslog.h>
+#endif
+
 #include <errno.h>
 #include <pthread.h>
 #include <stdio.h>
